# rcoder

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
rcoder/: README.md  README_EN.md  __init__.py  async_feedback.py  async_proxy.py  auto_optimizer.py  cli.py  cli_enhanced.py  conversational_config.py  core.py  core_optimized.py  process_manager.py  remote_tools.py  server_installer.py  utils.py
rcoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
